- fixed a lot of deprecation warnings - updated eclipse project/settings files for Java 11